Finished 960px, fixed typo

--- a/Practice_2020/HW7-8/page-header/page-header.css
+++ b/Practice_2020/HW7-8/page-header/page-header.css
@@ -33,6 +33,7 @@
     margin-top: 74px;
 }
 
+/*480*/
 @media (min-width: 321px) {
     .page-header {
         background-position: -968px 0;
@@ -62,6 +63,7 @@
     }
 }
 
+/*768*/
 @media (min-width: 481px) {
     .page-header {
         background-position: -815px 0;
