--- a/Practice_2020/HW7-8/hidden/hidden.css
+++ b/Practice_2020/HW7-8/hidden/hidden.css
@@ -14,18 +14,21 @@
     display: none;
 }
 
+/*480*/
 @media (min-width: 321px) {
     .hidden_less-than-320 {
         display: inline-block;
     }
 }
 
+/*768*/
 @media (min-width: 481px) {
     .hidden_less-than-768 {
         display: -webkit-box;
     }
 }
 
+/*960*/
 @media (min-width: 769px) {
     .hidden_less-than-960 {
         display: inline;
