--- a/Practice_2020/HW7-8/css/reset.css
+++ b/Practice_2020/HW7-8/css/reset.css
@@ -48,11 +48,11 @@ a:not([class]) {
   text-decoration-skip-ink: auto;
 }
 
-/* Упрощаем работу с изображениями */
+/* Упрощаем работу с изображениями
 img {
   max-width: 100%;
   display: block;
-}
+} */
 
 /* Указываем понятную периодичность в потоке данных у article*/
 /*article > * + * {
