--- a/Practice_2020/HW7-8/page-header/page-header.css
+++ b/Practice_2020/HW7-8/page-header/page-header.css
@@ -1,131 +1,172 @@
+/* ==========================================================================
+   #PAGE-HEADER
+   ========================================================================== */
+
+/**
+ * PAGE-HEADER inludes logo, main-menu and carousel *
+ *
+ *1. Black overlay for block "carousel"
+ */
+
 .page-header {
-    display: flex;
-    justify-content: center;
     position: relative;
-    width: 100%;
     border-bottom: 1px solid #35283c;
-    background: url("page-background.jpg")  -1048px 0 no-repeat;
+    background-image: url("page-background.jpg");
+    background-repeat: no-repeat;
+    background-position-x: -1048px;
+    background-position-y: 0;
 }
 
-.page-header__wrapper {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 68px;
-}
-
-.page-header__logo {
-    margin-top: 70px;
-}
-
-.page-header__main-menu {
-    position: absolute;
-    top: 139px;
-    z-index: 55;
-}
-
-.page-header__carousel {
-    margin-top: 178px;
-}
-
-.page-header__pagination {
-    margin-top: 74px;
-}
-
-/*480*/
 @media (min-width: 321px) {
     .page-header {
-        background-position: -968px 0;
+        background-position-x: -968px;
     }
 
-    .page-header__wrapper {
-        padding-bottom: 56px;
-    }
-
-    .page-header:after {
+    .page-header:after {        /*[1]*/
         position: absolute;
         left: 0;
-        top: 203px;
-        display: block;
+        top:  203px;
         content: '';
         width: 100%;
-        height: 246px;
+        height: 51vw;
         background: rgba(0, 0, 0, 0.2);
-    }
-
-    .page-header__carousel {
-        margin-top: 83px;
-    }
-
-    .page-header__pagination {
-        margin-top: -25px;
     }
 }
 
-/*768*/
 @media (min-width: 481px) {
     .page-header {
-        background-position: -815px 0;
+        background-position-x: -815px;
     }
 
     .page-header:after {
         top: 244px;
-        height: 400px;
+        height: 52vw;
     }
-    .page-header__wrapper {
-        padding-bottom: 100px;
+}
+
+@media (min-width: 769px) {
+    .page-header {
+        background-position-x: -700px;
     }
 
+    .page-header:after {
+        top: 278px;
+        height: 400px;
+    }
+}
+
+
+    .page-header__wrapper {
+        position: relative;
+        padding-bottom: 9vh;
+    }
+
+    @media (min-width: 321px) {
+        .page-header__wrapper {
+            padding-bottom: 8vh;
+        }
+    }
+
+    @media (min-width: 481px) {
+        .page-header__wrapper {
+            padding-bottom: 16.3vh;
+        }
+    }
+
+    @media (min-width: 769px) {
+        .page-header__wrapper {
+            max-width: 960px;
+            padding-bottom:10.5vh;
+        }
+    }
+
+
+        .page-header__logo {
+            margin-top: 11vh;
+        }
+
+
+        .page-header__main-menu {
+            position: absolute;
+            top: 22vh;
+            z-index: 55;
+        }
+
+        @media (min-width: 481px) {
+            .page-header__main-menu{
+                width: 84%;
+            }
+        }
+
+        @media (min-width: 769px) {
+            .page-header__main-menu {
+                top:   11vh;
+                right: 1%;
+                width: 62%;
+            }
+        }
+
+
+        .page-header__carousel {
+            margin-top: 28.5vh;
+        }
+
+        @media (min-width: 321px) {
+            .page-header__carousel {
+                margin-top: 11vh;
+            }
+        }
+
+        @media (min-width: 481px) {
+            .page-header__carousel {
+                margin-top: 17vh;
+            }
+        }
+
+        @media (min-width: 769px) {
+            .page-header__carousel {
+                margin-top: 22vh;
+            }
+        }
+
+
+        .page-header__pagination {
+                margin-top: 12vh;
+        }
+
+        @media (min-width: 321px) {
+            .page-header__pagination {
+                margin-top: 0;
+            }
+        }
+
+        @media (min-width: 481px) {
+            .page-header__pagination {
+                align-self: flex-end;
+                margin-top:   5vh;
+                margin-right: 16%;
+            }
+        }
+        @media (min-width: 769px) {
+            .page-header__pagination {
+                margin-top:   13vh;
+                margin-right: 14%;
+            }
+        }
+
+/*768*/
+@media (min-width: 481px) {
     .page-header__logo,
     .page-header__main-menu{
         align-self: flex-start;
         margin-left: 3%;
     }
-
-    .page-header__main-menu{
-        width: 82%;
-    }
-
-    .page-header__carousel {
-        margin-top: 109px;
-    }
-
-    .page-header__pagination {
-        margin-top: 23px;
-        align-self: flex-end;
-        margin-right: 16%;
-    }
 }
 
 /*960*/
 @media (min-width: 769px) {
-
-    .page-header {
-        background-position: -700px 0;
-    }
-
-    .page-header:after {
-        top: 278px;
-    }
-
-    .page-header__wrapper{
-        max-width: 960px;
-        padding-bottom: 58px;
-    }
-
-    .page-header__logo, .page-header__main-menu {
+       .page-header__logo,
+       .page-header__main-menu {
         margin-left: 2%;
-    }
-
-    .page-header__main-menu {
-        top: 69px;
-        right: 1%;
-        width: 67%;
-    }
-
-    .page-header__pagination {
-        margin-top: 124px;
-        margin-right: 14%;
     }
 }
