--- a/Practice_2020/HW7-8/main-content/main-content.css
+++ b/Practice_2020/HW7-8/main-content/main-content.css
@@ -1,197 +1,191 @@
-.main-content {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    padding-top: 70px;
+/** ==========================================================================
+   #C-MAIN-CONTENT is a component
+   ==========================================================================*/
+
+/*
+* 1. Extends .c-article-icon
+* 2. Сдвиг фона по вертикали до середины аватарки (box-shadow распространяется на весь контейнер).
+*/
+
+.c-main-content {
     background-color: #f9f9f9;
     border-bottom: 1px solid #e6e6e6;
-
     color: #454545;
 }
 
-.main-content__wrapper {
-    display: flex;
-    flex-direction: column;
-    padding-top: 70px;
-    width: 93%;
-}
+@media (min-width: 481px) { .c-main-content { padding-bottom: 2px; } }
+@media (min-width: 769px) { .c-main-content { padding-bottom: 5px; } }
 
-.main-content__wrapper > * + * {
-    margin-top: 39px;
-}
 
-.main-content__item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
+    .c-main-content__wrapper {
+        padding-top: 22.5%;
+    }
 
-.main-content__article {
-    align-self: flex-end;
-    width: 87%;
-    padding-top: 19px;
-    padding-bottom: 26px;
-    padding-left: 34px;
-    background-color: #ffffff;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-}
+    @media (min-width: 321px) {
+        .c-main-content__wrapper {
+            padding-top: 15%;
+        }
+    }
 
-.main-content__article .text-uppercase{
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
-}
 
-.main-content__article-subtitle {
-    display: block;
-    margin-top: -13px;
-}
+    @media (min-width: 481px) {
+        .c-main-content__wrapper {
+            padding-top: 13.5%;
+        }
+    }
 
-.main-content__article-text {
-    padding-right: 6px;
-    padding-left: 3px;
-    letter-spacing: 0.015em ;
-}
+    @media (min-width: 769px) {
+        .c-main-content__wrapper {
+            max-width: 960px;
+            padding-top: 10.5%;
+        }
+    }
 
-.main-content .article__icon {
-    top: 17px;
-    left: -27px;
-}
-
-.main-content__article .text_preview {
-    -webkit-line-clamp: 7;
-}
-
-.main-content__pagination {
-    margin-top: 25px;
-}
-
-.main-content__recent-updates {
-    margin-bottom: 84px;
-}
-
-/*480*/
-@media (min-width: 321px) {
-    .main-content__wrapper {
+    .c-main-content__item {
         width: 100%;
     }
-    .main-content__article {
-        width: 96%;
-        padding-right: 5px;
-        padding-bottom: 33px;
-        padding-left: 68px;
-        margin-right: 12px;
-    }
 
-    .main-content__article-subtitle {
-        display: inline;
-    }
+        .c-main-content__item:not(:first-child) { margin-top: 12%; }
 
-    .main-content__article .text-uppercase{
-        font-size: 30px;
-    }
+    @media (min-width: 321px) {
+        .c-main-content__item:not(:first-child) { margin-top: 8.5%; } }
 
-    .main-content .article__icon {
-        left: 3px;
-    }
-
-    .main-content__article-text {
-        padding-top: 7px;
-        padding-right: 7px;
-    }
-}
-
-/*768*/
-@media (min-width: 481px) {
-
-    .main-content {
-        padding-bottom: 2px;
-    }
-
-    .main-content__wrapper {
-        flex-direction: row;
-        justify-content: space-between;
-        padding-top: 30px;
-    }
-
-    .main-content__item {
-        width: 50%;
-    }
-
-    .main-content__article {
-        width: 83%;
-        padding: 23px 3% 43px 10%;
-        margin-right: 5%;
-    }
-
-    .main-content .article__icon {
-        left: -9%;
-        width: 17%;
-    }
-
-    .main-content__article .text-uppercase {
-        font-size: 24px;
-    }
-
-    .main-content__article-subtitle {
-        display: block;
-    }
-
-    .main-content__article .text_preview {
-        -webkit-line-clamp: 6;
-    }
-
-    .main-content__article-text {
-        padding-top: 3px;
-    }
-}
-
-/*960*/
-@media (min-width: 769px) {
-    .main-content {
-        padding-bottom: 5px;
-    }
-
-    .main-content__wrapper {
-        max-width: 960px;
-        padding-top: 27px;
-    }
-
-    .main-content__wrapper > * + * {
-        margin-top: 24px;
-    }
-
-    .main-content .article__icon {
-        left: -6%;
-        width: 13%;
-    }
-
-    .main-content__article {
-        position: relative;
-        width: 91%;
-        padding: 23px 3% 36px 8%;
-        margin-right: 0;
-    }
-
-    .main-content__article:after {
-        position: absolute;
-        bottom: -20px;
-        right: 10%;
-        content: '';
-        border: 15px solid transparent;
-        border-top: 15px solid white;
-        border-right: 15px solid white;
-    }
+    @media (min-width: 481px) {
+        .c-main-content__item:not(:first-child) { margin-top: 2.5%; } }
 
 
-    .main-content .text-uppercase {
-        font-size: 30px;
-    }
+        @media (min-width: 481px) {
+            .c-main-content__item {
+                width: 50%;
+            }
+        }
 
-    .main-content__article-subtitle {
-        display: inline;
-    }
 
-    .main-content__article .text_preview {
-        -webkit-line-clamp: 7;
-    }
-}
+            .c-main-content__article {
+                width: 93%;
+                padding-top:    6.5%;
+                padding-bottom: 9%;
+                background-image: linear-gradient(to right, #f9f9f9 9%, #fff 8%);  /*[2]*/
+                box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+            }
+
+            @media (min-width: 321px) {
+                .c-main-content__article {
+                    width: 96%;
+                    padding-top:    4%;
+                    padding-bottom: 8.5%;
+                    background-image: linear-gradient(to right, #f9f9f9 6%, #fff 5%);
+                }
+            }
+
+            @media (min-width: 481px) {
+                .c-main-content__article {
+                    width: 90%;
+                    padding-top:    5.5%;
+                    padding-bottom: 11.5%;
+                    background-image: linear-gradient(to right, #f9f9f9 7%, #fff 6%);
+                }
+            }
+
+            @media (min-width: 769px) {
+                .c-main-content__article {
+                    width: 100%;
+                    padding-bottom: 6.5%;
+                    background-image: linear-gradient(to right, #f9f9f9 9%, #fff 8%);
+                }
+            }
+
+            @media (min-width: 769px) {
+                .c-main-content__article:after {
+                    position: absolute;
+                    bottom: -20px;
+                    right:   10%;
+                    content: '';
+                    border-style: solid;
+                    border-width: 15px;
+                    border-color: transparent;
+                    border-top-color:   white;
+                    border-right-color: white;
+                }
+            }
+
+                .c-main-content .c-article__icon {  /*[1]*/
+                    width: 53px;
+                    height: 53px;
+                    transform: translate(-17%, -6%);
+                    margin-right: 0;
+                }
+
+                @media (min-width: 321px) {
+                    .c-main-content .c-article__icon {
+                        margin-right: 1%;
+                        transform: translate(-13%, -2%);
+                    }
+                }
+
+                @media (min-width: 481px) {
+                    .c-main-content .c-article__icon {
+                        margin-right: 0.75%;
+                        transform: translate(-17.5%, -10.5%);
+                    }
+                }
+
+                @media (min-width: 769px) {
+                    .c-main-content .c-article__icon {
+                        margin-right: 4.5%;
+                        transform: translate(16.5%, -16%);
+                    }
+                }
+
+
+                .c-main-content__article .text-uppercase{
+                    text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
+                }
+
+                @media (min-width: 321px) { .c-main-content__article .text-uppercase { font-size: 30px; } }
+                @media (min-width: 481px) { .c-main-content__article .text-uppercase { font-size: 24px; } }
+                @media (min-width: 769px) { .c-main-content__article .text-uppercase { font-size: 30px; } }
+
+
+                    .c-main-content__article-subtitle {
+                        display: block;
+                        margin-top: -13px;
+                    }
+
+                    @media (min-width: 321px) { .c-main-content__article-subtitle { display: inline; } }
+                    @media (min-width: 481px) { .c-main-content__article-subtitle { display: block;  } }
+                    @media (min-width: 769px) { .c-main-content__article-subtitle { display: inline; } }
+
+
+                    .c-main-content__article-text {
+                        letter-spacing: 0.015em ;
+                    }
+
+                    @media (min-width: 321px) {
+                        .c-main-content__article-text {
+                            padding-top:   2px;
+                            padding-right: 4%;
+                        }
+                    }
+
+                    @media (min-width: 481px) {
+                        .c-main-content__article-text {
+                            padding-top: 3px;
+                        }
+                    }
+
+
+                        .c-main-content__article .text_preview { -webkit-line-clamp: 7; }
+                    @media (min-width: 481px) {
+                        .c-main-content__article .text_preview { -webkit-line-clamp: 6; } }
+                    @media (min-width: 769px) {
+                        .c-main-content__article .text_preview { -webkit-line-clamp: 7; } }
+
+
+                                        .c-main-content__pagination { margin-top: 8.5%; }
+            @media (min-width: 321px) { .c-main-content__pagination { margin-top: 5%; } }
+
+
+                                        .c-main-content__recent-updates { margin-bottom: 17%;   }
+            @media (min-width: 481px) { .c-main-content__recent-updates { margin-bottom: 25%;   } }
+            @media (min-width: 769px) { .c-main-content__recent-updates { margin-bottom: 17.5%; } }
