--- a/Practice_2020/HW7-8/page/page.css
+++ b/Practice_2020/HW7-8/page/page.css
@@ -1,49 +1,53 @@
-.page {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 
 .page__banners {
     border-top: 1px solid #fefefe;
 }
 
-.page__banners-list {
-    margin: 51px 0 75px 0;
-}
-/*480px*/
+
+    .page__banners-list {
+        margin-top:    12%;
+        margin-bottom: 26%;
+    }
+
+    @media (min-width: 321px) {
+        .page__banners-list {
+            margin-top:    7.5%;
+            margin-bottom: 6.5%;
+        }
+    }
+
+    @media (min-width: 481px) {
+        .page__banners-list {
+            margin-top:    3%;
+            margin-bottom: 3%;
+        }
+    }
+
+    @media (min-width: 769px) {
+        .page__banners-list {
+            margin-top:    2.5%;
+            margin-bottom: 2.5%;
+        }
+    }
+
+
 @media (min-width: 321px) {
-
-    .page__banners-list {
-        margin: 35px 0 43px 0;
-    }
-
     .page__news {
-        padding-top: 56px;
-        padding-bottom: 90px;
+        padding-top:    11%;
+        padding-bottom: 13%;
     }
 }
 
-/*768*/
 @media (min-width: 481px) {
-    .page__banners-list {
-        margin: 25px 0 29px 0;
-    }
-
     .page__news {
-        padding-top: 40px;
-        padding-bottom: 95px;
+        padding-top:    6.5%;
+        padding-bottom: 12.75%;
     }
 }
 
-/*960*/
 @media (min-width: 769px) {
-    .page__banners-list {
-        margin: 25px 0 29px 0;
-    }
-
     .page__news {
-        padding-top: 40px;
-        padding-bottom: 95px;
+        padding-top:    8.5%;
+        padding-bottom: 10%;
     }
 }
