--- a/Practice_2020/HW7-8/recent-updates/recent-updates.css
+++ b/Practice_2020/HW7-8/recent-updates/recent-updates.css
@@ -1,119 +1,133 @@
-.recent-updates {
+/** ==========================================================================
+   #C-RECENT-UPDATES is a component
+   ==========================================================================*/
+
+/*
+* 1. Extends .c-article-icon
+*/
+
+
+.c-recent-updates {
     display: flex;
     flex-direction: column;
-    width: 92%;
+    width: 93%;
 }
 
-.recent-updates__item{
-    position: relative;
-    margin-bottom: 17px;
-    padding-left: 67px;
-}
-
-.recent-updates__icon {
-    position: absolute;
-    top: 0;
-    left: 1px;
-    background-image: url("updates_icon.png");
-    width: 49px;
-    height: 49px;
-}
-
-.recent-updates__header {
-    margin-bottom: 9px;
-    font-size: 30px;
-    text-shadow: 1px 1px 0 rgba(255, 255, 255, 1);
-}
-
-.recent-updates__text {
-    font-weight: bold;
-}
-
-.recent-updates__link {
-    align-self: flex-end;
-    margin-top: 3px;
-    margin-right: -16px;
-}
-
-.recent-updates__info {
-    letter-spacing: -0.005em;
-    white-space: nowrap;
-}
-
-/*480*/
 @media (min-width: 321px) {
-
-    .recent-updates {
-        width: 81%;
-    }
-
-    .recent-updates__item {
-        padding-left: 98px;
-        margin-bottom: 19px;
-    }
-
-    .recent-updates__header {
-        margin-left: 31px;
-    }
-
-    .recent-updates__icon {
-        left: 32px;
-    }
-    .recent-updates__link {
-        margin-top: -3px;
-        margin-right: 8px;
+    .c-recent-updates {
+        width: 78.5%;
+        padding-left: 5.5%;
     }
 }
 
-/*768*/
 @media (min-width: 481px) {
-
-    .recent-updates {
+    .c-recent-updates {
         width: 100%;
     }
+}
 
-    .main-content__wrapper > * + * {
-        margin-top: 21px;
-    }
-
-    .recent-updates__header {
-        margin-left: 39px;
-    }
-
-    .recent-updates__item {
-        padding-left: 30%;
-    }
-
-    .recent-updates__icon {
-        left: 11%;
-    }
-
-    .recent-updates__info {
-        white-space: normal;
+@media (min-width: 481px) {
+    .c-recent-updates {
+        width: 100%;
+        padding-left: 0%;
     }
 }
 
-/*960*/
-@media (min-width: 769px){
-    .recent-updates__header {
-        margin-left: 12%;
+
+    .c-recent-updates__header {
+        margin-bottom: 3.5%;
+        font-size: 30px;
+        text-shadow: 1px 1px 0 rgba(255, 255, 255, 1);
     }
 
-    .recent-updates__item {
-        padding-left: 26%;
+    @media (min-width: 481px) {
+        .c-recent-updates__header {
+            margin-left: 5%;
+        }
     }
 
-    .recent-updates__icon {
-        left: 12%;
+    @media (min-width: 769px) {
+        .c-recent-updates__header {
+            margin-left:   12%;
+            margin-bottom: 1.5%;
+        }
     }
 
-    .recent-updates__info {
-        white-space: nowrap;
-    }
 
-    .recent-updates .recent-updates__link {
-        font-size: 18px;
+                                .c-recent-updates .c-article { margin-bottom: 7%;    }
+    @media (min-width: 321px) { .c-recent-updates .c-article { margin-bottom: 5.5%;  } }
+    @media (min-width: 481px) { .c-recent-updates .c-article { margin-bottom: 4.75%; } }
+    @media (min-width: 481px) { .c-recent-updates .c-article { margin-bottom: 3.5%; } }
+
+
+        .c-recent-updates .c-article__icon {   /*[1]*/
+            margin-right: 3.5%;
+            width:  49px;
+            height: 49px;
+            transform: translate(-14%, 0%);
+        }
+
+        @media (min-width: 321px) {
+            .c-recent-updates .c-article__icon {
+                margin-right: 3%;
+                transform: translate(-10%, 0%);
+            }
+        }
+
+        @media (min-width: 481px) {
+            .c-recent-updates .c-article__icon {
+                margin-right: 8%;
+                transform: translate(25%, -4%);
+            }
+        }
+
+        @media (min-width: 769px) {
+            .c-recent-updates .c-article__icon {
+                margin-right: 14%;
+                transform: translate(103%, 2%);
+            }
+        }
+
+
+        .c-recent-updates__text {
+            font-weight: bold;
+        }
+
+        @media (min-width: 321px) {
+            .c-recent-updates__text {
+                width: 102%;
+            }
+        }
+
+
+        .c-recent-updates__info {
+            letter-spacing: -0.005em;
+            white-space: nowrap;
+        }
+
+
+        @media (min-width: 481px) {
+            .c-recent-updates__info {
+                white-space: normal;
+            }
+        }
+
+        @media (min-width: 769px) {
+            .c-recent-updates__info {
+                white-space: nowrap;
+            }
+        }
+
+    .c-recent-updates__link {
         align-self: flex-end;
-        margin-right: 0;
+        margin-right: 2%;
     }
-}
+
+
+    @media (min-width: 769px){
+        .c-recent-updates__link {
+            font-size: 18px;
+            align-self: flex-end;
+            margin-right: 0;
+        }
+    }
