--- a/Practice_2020/HW7-8/text/text.css
+++ b/Practice_2020/HW7-8/text/text.css
@@ -1,3 +1,9 @@
+/*
+* 1. Ограничивает выводимое количество строк текста
+*/
+
+
+
 .text {
     color: inherit;
     font-family: Open_Sans, Arial, sans-serif;
@@ -27,10 +33,10 @@
     font-size: 18px;
 }
 
-.text_preview {
+.text_preview {                 /*[1]*/
     -ms-text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
+     -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
     overflow: hidden;
     -webkit-line-clamp: 3;
     display: -webkit-box;
